[package]
name = "tonic_grpc"
version = "0.1.0"
authors = ["chengxd <chengxd@wondershare.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rustls = "0.18.0"
tonic = { version = "0.3", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "fs"] }

[build-dependencies]
tonic-build = "0.3"