[package]
name = "use_serde"
version = "0.1.0"
authors = ["chengxd <chengxd@wondershare.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
serde_yaml = "0.8.12"